--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -41,3 +41,71 @@ a.dropdown-item:active {
 .me-6 {
     margin-right: 15rem !important;
 }
+
+.p-galleria .p-galleria-indicators .p-galleria-indicator button {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #ccc;
+    border: none;
+    margin: 0 0px;
+    transition: background-color 0.3s ease;
+}
+
+/* Aktif indicator'ın rengi */
+.p-galleria .p-galleria-indicators .p-galleria-indicator.p-highlight button {
+    background-color: #407e78;
+}
+
+.min-vh-50 {
+    min-height: 50vh;
+}
+
+.p-galleria-item-prev,
+.p-galleria-item-next {
+    width: 50px;
+    height: 50px;
+    background-color: #eaf6ea;
+    color: black;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+    border: #bcdfbc 1px solid;
+}
+
+/* Hover durumunda renk */
+.p-galleria-item-prev:hover,
+.p-galleria-item-next:hover {
+    background-color:
+        #407e78;
+    color: white;
+}
+
+.p-galleria-item-prev {
+    left: 15px;
+}
+
+.p-galleria-item-next {
+    right: 15px;
+}
+
+@media (max-width: 768px) {
+
+    .p-galleria-item-prev,
+    .p-galleria-item-next {
+        display: none !important;
+    }
+}
+
+.p-galleria-item-prev svg,
+.p-galleria-item-next svg {
+    width: 16px !important;
+    height: 16px !important;
+}
+
+.cat-menu {
+    background-color: white !important;
+    border-radius: 0% !important;
+    border: 1px solid #e0e0e0 !important;
+    border-top: none !important;
+
+}
