--- a/src/admin/assets/css/style.css
+++ b/src/admin/assets/css/style.css
@@ -165,5 +165,41 @@
     color: white !important;
     transition: box-shadow 0.2s;
     transition: all 0.3s ease;
+}
 
+.dropdown-icon {
+    transition: transform 0.3s ease;
+    transform-origin: center;
+}
+
+.dropdown-icon.rotate {
+    transform: rotate(180deg);
+}
+
+.fade-text {
+    opacity: 0;
+    animation: fadeIn 0.4s ease forwards;
+}
+
+.dropdown-content {
+    overflow: hidden;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.3s ease, opacity 0.3s ease;
+}
+
+.dropdown-content.open {
+    max-height: 100px;
+    opacity: 1;
+}
+
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
